--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="about">
           <div class="about-me">
             <div class="profile-image">
-              <img src="assets/Adnan.jpg" alt="Profile Picture" />
+              <img src="Adnan.jpg" alt="Profile Picture" />
             </div>
             <div>
               <h2>About Me</h2>
