--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div class="card">
                 <h3>Kristu Jayanti College</h3>
                 <p>BCA (2022-2025)</p>
-                <p>Percentage: 61.75%</p>
+                <p>Percentage: 68.5%</p>
               </div>
               <div class="card">
                 <h3>Quwathul Islam PU College</h3>
@@ -204,30 +204,30 @@
               <ul>
                 <li>
                   <a
-                    href="https://drive.google.com/file/d/1BzLlN9Q_SQ-9CD2fF-FK8tTGobMz3Z2E/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1-zouYv4xQz_CMYvatCq9qXlonZ6tGtzr/view?usp=drive_link"
                     target="_blank"
-                    >Introduction to MongoDB</a
+                    >NPTEL - The Joy of Computing Using Python</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://drive.google.com/file/d/1XS-GgMKxxYqZ4mTZ5FmxkzK9xN4UZpRd/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1-ZeC9AAKFLT5j1Sc1Vi576ComMZoPiOW/view?usp=drive_link"
                     target="_blank"
-                    >Network Fundamentals</a
+                    >Selenium Webdriver with Python</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://drive.google.com/file/d/125YsAuN4DEDqjZv8KVkZwu45z94dAvio/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1tJ3d4tPM5eqVtbue20jQRn1A7oDB509W/view?usp=drive_link"
                     target="_blank"
-                    >Introduction to Generative AI</a
+                    >JP Morgan - Software Engineering Job Simulation by Forage</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://drive.google.com/file/d/11PsJ5YSLUKrPiMaRwBvPdO7ZQb2rad-W/view?usp=sharing"
+                    href="https://drive.google.com/file/d/11PsJ5YSLUKrPiMaRwBvPdO7ZQb2rad-W/view?usp=drive_link"
                     target="_blank"
-                    >IBM Workshop on Generative AI in Software Development</a
+                    >IBM Workshop - Use of Generative AI in Software Development</a
                   >
                 </li>
               </ul>
