--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div class="card">
                 <h3>Kristu Jayanti College</h3>
                 <p>BCA (2022-2025)</p>
-                <p>Percentage: 68.5%</p>
+                <p>CGPA: 6.9</p>
               </div>
               <div class="card">
                 <h3>Quwathul Islam PU College</h3>
