--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="about">
           <div class="about-me">
             <div class="profile-image">
-              <img src="Adnan.jpg" alt="Profile Picture" />
+              <img src="RaquibAdnan.jpg" alt="Profile Picture" />
             </div>
             <div>
               <h2>About Me</h2>
@@ -261,4 +261,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
 
